@@ -1,6 +1,7 @@
 Version 3.2 (X X, 2018) - ""
 ------------------------------------------------------------------------------
 *** CORE/CPU ***
+Fixed the Nuova Bell sound board. This had various issues, and information is quite sparse.
 
 *** ROM SUPPORT *** Thanks to 
 
